<resources>
    <string name="app_name">E-Learning</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="action_home">Home</string>
    <string name="action_programs">Programs</string>
    <string name="action_enrollment">Enrollment</string>
    <string name="action_community">Community</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_administrator">Administrator</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact</string>


    <string name="text_intro">Live Online Classes</string>
    <string name="textVideo">Coming Soon</string>
    <string name="button">Click!</string>
    <string name="enrollment_description">Click the button to manage enrollment of students</string>
    <string name="content_description">Click the button to manage each course contents</string>

    <string name="textlogin">Login</string>
    <string name="hintemail">Email</string>
    <string name="hintpassword">Password</string>
    <string name="rbtn_student">Student</string>
    <string name="rbtn_instructor">Instructor</string>
    <string name="textviewnewac">Create New Account?</string>
    <string name="textviewor">OR</string>

    <string name="textviewRegister">Register?</string>
    <string name="edittxtfirstname">First Name</string>
    <string name="edittxtlastname">Last Name</string>
    <string name="textforgotpassword">Forgot Password?</string>
    <string name="btnlogin">Login</string>
    <string name="edittextconfirmpassword">Confirm Password</string>
    <string name="btnregister">Register</string>
    <string name="textviewalreadyhaveac">Already Have Account?</string>
    <string name="Welcome_message">Welcome to E-Learn Application</string>
    <string name="title_activity_navigation_drawer">title_activity_navigation_drawer</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_coursemanager">Course Manager</string>
    <string name="menu_salesreport">Sales Report</string>
    <string name="menu_payoutreport">Payout Report</string>
    <string name="menu_payoutsettings">Payout Settings</string>
    <string name="menu_message">Message</string>
    <string name="menu_manageprofile">Manage Profile</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="nav_header_title">nav_header_title</string>
    <string name="nav_header_subtitle">nav_header_subtitle</string>
    <string name="account_text">account_text</string>
    <string name="calendet_text">calendet_text</string>
    <string name="chat_text">chat_text</string>


</resources>